...
          headerLeft: () => <HeaderCloseButton />,
        }}
      />
      <Stack.Screen
        name="import-url"
        options={{
          title: 'Paste URL',
          presentation: 'modal',
        }}
      />
      <Stack.Screen
        name="import-photo"
        options={{
...
